--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: django_minifier.__version__
 url = https://github.com/realnoobs/django_minifier
 author = Rizki Sasri Dwitama
 author_email = sasri.project@gmail.com
-description = Simple Django Hooks
+description = Django template minifier
 long_description_content_type = text/markdown
 long_description = file: README.md
 license = MIT
